docker compose changes